# researcher-agent

./: .env  .gitignore  README.md  pyproject.toml  report.md
src/researcher_agent/: __init__.py  main.py
src/researcher_agent/crews/research_crew/: research_crew.py
src/researcher_agent/crews/research_crew/config/: agents.yaml  tasks.yaml
